Fix references to traces and their identifiers